--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <li>绿色按钮是计算延米和包工包料总价格计算器；</li>
             <li>蓝色按钮是计算延米和美缝材料用量计算器；</li>
             <li>刷新网页相当于计算机归零；</li>
-            <li>在首页点几次按钮就出现几个计算器（无上限）；</li>
+            <li>在首页点几次按钮就出现几个计算器（无上限，仅适用于PC端）；</li>
             <li>材料用量计算会有小数点，例如2.52支/桶，就代表需要3支/桶，以此类推；</li>
             <li>材料用量计算器，如果需要双管材料就输入20，如果需要的是桶装3kg材料就输入100即可；</li>
             <li>计算器代码仅供个人学习使用，请勿用于商业用图，如有侵权可联系删除 email:coco241031@126.com；</li>
