--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             <li>在首页点几次按钮就出现几个计算器（无上限，仅适用于PC端）；</li>
             <li>材料用量计算会有小数点，例如2.52支/桶，就代表需要3支/桶，以此类推；</li>
             <li>材料用量计算器，如果需要双管材料就输入20，如果需要的是桶装3kg材料就输入100即可；</li>
-            <li>计算器代码仅供个人学习使用，请勿用于商业用图，如有侵权可联系删除 email:coco241031@126.com；</li>
-            <li>如有任何问题，请通过邮箱联系反馈，谢谢！</li>
+            <li>计算器代码仅供个人学习使用，请勿用于商业用图，如有侵权可联系删除；</li>
+            <li>如有任何问题，请通过邮箱联系反馈，谢谢（Mail:coco241031@126.com）！</li>
         </ol>
     </div>
 
