--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- 网页的标题，浏览器标签页上显示的文本 -->
-    <title>美缝计算器</title>
+    <title>美缝计算器2.0</title>
 
     <style>
         /* 设置页面的整体样式 */
@@ -153,7 +153,7 @@
 </head>
 <body>
     <!-- 页面主标题 -->
-    <h1>美缝计算器</h1>
+    <h1>美缝计算器2.0</h1>
 
     <!-- 说明区域 -->
     <div class="description">
@@ -180,6 +180,6 @@
     </div>
     
     <!-- 页脚，显示制作人信息 -->
-    <footer>制作人：Kevin鲁大师【未经许可 盗用必究】</footer>
+    <footer>制作人: Kevin鲁大师 / 仅供学习交流 勿用于商业 / 未经许可 盗用必究</footer>
 </body>
 </html>
