--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- 网页的标题，浏览器标签页上显示的文本 -->
-    <title>美缝计算器2.0</title>
+    <title>美缝计算器</title>
 
     <style>
         /* 设置页面的整体样式 */
@@ -153,7 +153,7 @@
 </head>
 <body>
     <!-- 页面主标题 -->
-    <h1>美缝计算器2.0</h1>
+    <h1>美缝计算器</h1>
 
     <!-- 说明区域 -->
     <div class="description">
@@ -161,22 +161,20 @@
         <ol>
             <li>绿色按钮是计算延米和包工包料总价格计算器；</li>
             <li>蓝色按钮是计算延米和美缝材料用量计算器；</li>
-            <li>刷新网页相当于计算机归零；</li>
+			<li>计算器顶部有切换面积或者块数计算方式；</li>
+			<li>当有多个瓷砖规格时可以点击增加瓷砖规格；</li>
+			<li>当重新输入数据时结果才会随之更新；</li>
             <li>首页点几次按钮就出现几个计算器（此项仅适用于PC端）；</li>
-            <li>材料用量计算有小数点，例如2.52支/桶，就代表需要3支/桶，以此类推；</li>
-            <li>材料用量计算器，如需要双管材料就输入20，如需要的是桶装3kg材料就输入100即可；</li>
             <li>计算器网页仅供学习交流，请勿用于商业，如有侵权可联系删除 ；</li>
-            <li>如有任何问题联系邮箱反馈：mail:coco241031@126.com</li>
+            <li>如有任何问题联系邮箱反馈：Mail:coco241031@126.com</li>
         </ol>
     </div>
 
     <!-- 按钮容器，放置各个功能的按钮 -->
     <div class="button-container">
-        <a href="https://kevinludashi.github.io/kevinludashimj2/" class="button green-button" target="_blank">面积算延米及价格计算器</a>
-        <a href="https://kevinludashi.github.io/kevinludashiks2/" class="button green-button" target="_blank">块数算延米及价格计算器</a>
-        <a href="https://kevinludashi.github.io/kevinludashimjcl2/" class="button blue-button" target="_blank">面积算延米及材料用量计算器</a>
-        <a href="https://kevinludashi.github.io/kevinludashikscl2/" class="button blue-button" target="_blank">块数算延米及材料用量计算器</a>
-        <a href="https://kevinludashi.github.io/kevinludashiLSJSQ/" class="button red-button" target="_blank">网页历史记录计算器</a>
+        <a href="https://kevinludashi.github.io/kevinludashiMFYMJSQ/" class="button green-button" target="_blank">美缝包工包料延米和价格计算器 3.0</a>
+        <a href="https://kevinludashi.github.io/kevinludashiMFCLYLJSQ/" class="button blue-button" target="_blank">美缝材料用量及延米计算器 3.0</a>
+        <a href="https://kevinludashi.github.io/kevinludashiLSJSQ/" class="button red-button" target="_blank">历史记录计算器 2.0</a>
     </div>
     
     <!-- 页脚，显示制作人信息 -->
