--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 			<li>计算器顶部有切换面积或者块数计算方式；</li>
 			<li>当有多个瓷砖规格时可以点击增加瓷砖规格；</li>
 			<li>当重新输入数据时结果才会随之更新；</li>
+			<li>计算器种面积单位是平方米㎡，长和宽的单位是米m，块数单位是块；</li>
             <li>首页点几次按钮就出现几个计算器（此项仅适用于PC端）；</li>
             <li>计算器网页仅供学习交流，请勿用于商业，如有侵权可联系删除 ；</li>
             <li>如有任何问题联系邮箱反馈：Mail:coco241031@126.com</li>
