--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
     <div class="description">
         <h2>使用须知：</h2>
         <ol>
-            <li>绿色按钮是计算延米和包工包料总价格计算器；</li>
+            <li>绿色按钮是计算延米和包工包料价格计算器；</li>
             <li>蓝色按钮是计算延米和美缝材料用量计算器；</li>
-			<li>计算器顶部有切换面积或者块数计算方式；</li>
-			<li>当有多个瓷砖规格时可以点击增加瓷砖规格；</li>
-			<li>当重新输入数据时结果才会随之更新；</li>
-			<li>计算器种面积单位是平方米㎡，长和宽的单位是米m，块数单位是块；</li>
+	    <li>使用计算器前请先选择计算器顶部的计算方式；</li>
+	    <li>当有多个瓷砖规格需要计算时点击增加瓷砖规格；</li>
+	    <li>当重新输入数据时结果才会随之更新；</li>
+	    <li>计算器中面积单位是平方米㎡，长和宽的单位是米m；</li>
             <li>首页点几次按钮就出现几个计算器（此项仅适用于PC端）；</li>
             <li>计算器网页仅供学习交流，请勿用于商业，如有侵权可联系删除 ；</li>
             <li>如有任何问题联系邮箱反馈：Mail:coco241031@126.com</li>
