--- a/index.html
+++ b/index.html
@@ -179,6 +179,6 @@
     </div>
     
     <!-- 页脚，显示制作人信息 -->
-    <footer>制作人: Kevin鲁大师 / 仅供学习交流 勿用于商业 / 未经许可 盗用必究</footer>
+    <footer>作者:Kevin鲁大师 / 仅供学习交流 勿用于商业 / 未经许可 盗用必究</footer>
 </body>
 </html>
